--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 #div1{
-  margin-left:200px;
-  margin-top:100px;
-  height:600px;
-  width:300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   border:1px solid black;
+}
+body{
+  background-image:url(instaback.jpg)
 }
