--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 #div1{
+  height: 90vh;
+  width:80vh;
+  margin-left:80px;
+  border:1px solid black;
+  background-color:white;
+}
+#div2{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  border:1px solid black;
-}
-body{
-  background-image:url(instaback.jpg)
+ height:100vh;
+ background-image:url(instaback.jpg)
 }
